prueba servicios login

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="scripts/app.js"></script>
     <script src="modules/authentication/services.js"></script>
     <script src="modules/authentication/controllers.js"></script>
+    <script src="modules/angular-md5/angular-md5.js"></script>
     <script src="modules/home/controllers.js"></script>
 </body>
 </html>
